JT-91189 Fix overlap of empty case with long tabs

--- a/packages/documents-list-widget/src/widgets/documents-list-widget/hub-widget-ui/empty-widget/empty-widget.module.css
+++ b/packages/documents-list-widget/src/widgets/documents-list-widget/hub-widget-ui/empty-widget/empty-widget.module.css
@@ -1,13 +1,10 @@
+/* custom styles for .empty */
 .empty {
-  position: absolute;
-  top: 50%;
-  left: 0;
-
-  width: 100%;
-
-  transform: translate(0, -50%);
-
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: calc(var(--ring-unit) * 6);
 }
 
 .face {
